--- a/noteboook/01_eda.ipynb
+++ b/noteboook/01_eda.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c64a0700",
    "metadata": {},
    "outputs": [],
@@ -22,35 +22,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "9c02fb76",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df1[\u001b[33m\"\u001b[39m\u001b[33mloan_stress_index\u001b[39m\u001b[33m\"\u001b[39m] = \u001b[43mdf\u001b[49m[\u001b[33m\"\u001b[39m\u001b[33mloan_amnt\u001b[39m\u001b[33m\"\u001b[39m] / df[\u001b[33m\"\u001b[39m\u001b[33mperson_income\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      2\u001b[39m df1[\u001b[33m\"\u001b[39m\u001b[33mcredit_strength\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33mcredit_score\u001b[39m\u001b[33m\"\u001b[39m] * df[\u001b[33m\"\u001b[39m\u001b[33mcb_person_cred_hist_length\u001b[39m\u001b[33m\"\u001b[39m]\n\u001b[32m      3\u001b[39m df1[\u001b[33m\"\u001b[39m\u001b[33memployment_stability\u001b[39m\u001b[33m\"\u001b[39m] = df[\u001b[33m\"\u001b[39m\u001b[33mperson_emp_exp\u001b[39m\u001b[33m\"\u001b[39m] / df[\u001b[33m\"\u001b[39m\u001b[33mperson_age\u001b[39m\u001b[33m\"\u001b[39m]\n",
-      "\u001b[31mNameError\u001b[39m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df1[\"loan_stress_index\"] = df[\"loan_amnt\"] / df[\"person_income\"]\n",
-    "df1[\"credit_strength\"] = df[\"credit_score\"] * df[\"cb_person_cred_hist_length\"]\n",
-    "df1[\"employment_stability\"] = df[\"person_emp_exp\"] / df[\"person_age\"]\n"
+    "df1[\"loan_stress_index\"] = df1[\"loan_amnt\"] / df1[\"person_income\"]\n",
+    "df1[\"credit_strength\"] = df1[\"credit_score\"] * df1[\"cb_person_cred_hist_length\"]\n",
+    "df1[\"employment_stability\"] = df1[\"person_emp_exp\"] / df1[\"person_age\"]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "35f7837f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "person_income                -0.135808\n",
+       "employment_stability         -0.024514\n",
+       "person_age                   -0.021476\n",
+       "person_emp_exp               -0.020481\n",
+       "credit_strength              -0.015049\n",
+       "cb_person_cred_hist_length   -0.014851\n",
+       "credit_score                 -0.007647\n",
+       "loan_amnt                     0.107714\n",
+       "loan_int_rate                 0.332005\n",
+       "loan_percent_income           0.384880\n",
+       "loan_stress_index             0.385011\n",
+       "loan_status                   1.000000\n",
+       "Name: loan_status, dtype: float64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df1.corr(numeric_only=True)[\"loan_status\"].sort_values()\n"
+   ]
   }
  ],
  "metadata": {
